# PanTheraSys

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  extracted_requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  windows-ci.yml
apps/console/: CMakeLists.txt  main.cpp
config/: defaults.ini  deployment.example.ini
db/schema/: mysql_5_7_init.sql
docs/architecture/: developer-onboarding.md  enterprise-development-plan-cn.md  github-bootstrap.md  overview.md  project-overview-cn.md
docs/qms/: requirements-baseline.md  risk-register.md  software-design-specification.md  traceability-matrix.md  verification-plan.md
scripts/: configure-msvc2019.ps1  normalize-utf8.ps1  run-console.ps1  validate-utf8.ps1
src/adapters/: CMakeLists.txt
src/adapters/config/: local_settings_store.cpp  local_settings_store.h
src/adapters/mysql/: mysql_clinical_data_repository.cpp  mysql_clinical_data_repository.h  mysql_repository_facade.cpp  mysql_repository_facade.h
src/adapters/seed/: seed_clinical_data_repository.cpp  seed_clinical_data_repository.h
src/adapters/sim/: simulation_device_facade.cpp  simulation_device_facade.h
src/core/: CMakeLists.txt
src/core/application/: application_context.cpp  application_context.h  event_bus.cpp  event_bus.h
src/core/device/: device_interfaces.h
src/core/domain/: system_types.cpp  system_types.h
src/core/repositories/: clinical_data_repository.h
src/core/safety/: safety_kernel.cpp  safety_kernel.h
src/core/services/: audit_service.cpp  audit_service.h  clinical_data_service.cpp  clinical_data_service.h
src/modules/: CMakeLists.txt
src/modules/dashboard/: device_monitor_page.cpp  device_monitor_page.h
src/modules/data/: data_management_page.cpp  data_management_page.h
src/modules/planning/: planning_page.cpp  planning_page.h
src/modules/shared/: mock_ultrasound_view.cpp  mock_ultrasound_view.h
src/modules/shell/: main_window.cpp  main_window.h
src/modules/treatment/: treatment_page.cpp  treatment_page.h
src/resources/: resources.qrc
src/resources/styles/: panthera.qss
tests/: CMakeLists.txt
tests/core/: application_context_tests.cpp  clinical_data_service_tests.cpp  safety_kernel_tests.cpp
tests/integration/: mysql_clinical_data_integration_tests.cpp
